receving strings correctly