@@ -5,12 +5,12 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import sun.misc.BASE64Decoder;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.util.Base64;
 
 @RestController
 @AllArgsConstructor
@@ -22,16 +22,16 @@ public class Controller {
     }
 
     @PostMapping(value = "/process")
-    public String helloPost(@RequestBody String base64) throws IOException {
-        BASE64Decoder decoder = new BASE64Decoder();
-        byte[] imageBytes = decoder.decodeBuffer(base64);
-
-        ByteArrayInputStream bis = new ByteArrayInputStream(imageBytes);
-        BufferedImage image = ImageIO.read(bis);
-        bis.close();
+    public String helloPost(@RequestBody Frame frame) throws IOException {
+        BufferedImage image = null;
+        try {
+            byte[] bytes = Base64.getDecoder().decode(frame.getCapture().split(",")[1]);
+            image = ImageIO.read(new ByteArrayInputStream(bytes));
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
 
         System.out.println("Resolution: " + image.getWidth() + "x" + image.getHeight());
         return "Resolution: " + image.getWidth() + "x" + image.getHeight();
     }
-
 }
